<resources>
    <string name="app_name" translatable="false">Espaço Cultural</string>

    <string name="no">Não</string>
    <string name="yes">Sim</string>

    <!-- HOME STRINGS -->
    <string name="old_expositions">Exposições Antigas</string>

    <!-- SALONS STRINGS -->
    <string name="salons">Salões</string>
    <string name="salons_number">Número do Salão</string>
    <string name="create_salon">Criar Salão</string>
    <string name="salon_leave_error_prevention">Você tem certeza que deseja sair da criação do salão?</string>
    <string name="salon_delete_error_prevention">Você tem certeza que deseja deletar o Salão </string>
    <string name="salon_edit_error_prevention">Você tem certeza que deseja sair da edição do salão?</string>
    <string name="edit_salon">Editar Salão</string>

    <!-- QR STRINGS -->
    <string name="qr_reader">Leitor QR</string>
    <string name="qr_code_description">Aproxime a câmera do seu celular ao código QR para poder escanear obras.</string>
    <string name="camera_off">Desativar câmera</string>
    <string name="camera_on">Ativar câmera</string>

    <!-- SETTINGS STRINGS -->
    <string name="settings">Configurações</string>
    <string name="languages">Idiomas</string>
    <string name="notifications">Notificações</string>
    <string name="contact_support">Suporte/Contato</string>
    <string name="email">E-mail: example@unifor.br</string>
    <string name="phone">Telefone: (85) 98765–4321</string>

    <!-- ARTS STRINGS -->
    <string name="arts">Obras</string>
    <string name="arts_name">Nome da Obra</string>
    <string name="arts_year">Ano</string>
    <string name="arts_author">Autor</string>
    <string name="arts_description_pt">Descrição</string>
    <string name="arts_description_en">Descrição EN</string>
    <string name="arts_description_es">Descrição ES</string>
    <string name="create_art">Criar Obra</string>
    <string name="art_leave_error_prevention">Você tem certeza que deseja sair da criação da obra?</string>
    <string name="art_delete_error_prevention">Você tem certeza que deseja deletar a obra </string>
    <string name="art_edit_error_prevention">Você tem certeza que deseja sair da edição da obra?</string>
    <string name="edit_art">Editar Obra</string>

    <!-- ARTISTS STRINGS -->
    <string name="artists">Artistas</string>
    <string name="artists_name">Nome do Artista</string>
    <string name="artists_biography">Biografia</string>
    <string name="create_artist">Criar Artista</string>
    <string name="artist_leave_error_prevention">Você tem certeza que deseja sair da criação do artista?</string>
    <string name="artist_delete_error_prevention">Você tem certeza que deseja deletar o artista </string>
    <string name="artist_edit_error_prevention">Você tem certeza que deseja sair da edição de artista?</string>
    <string name="edit_artist">Editar Artista</string>

    <!-- LOGIN PAGE STRINGS -->
    <string name="enter_as_adm">Entrar como Administrador</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="show_password">Mostrar Senha</string>
    <string name="access">Acessar</string>
    <string name="arts_description">Descrição</string>
</resources>