<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/branco_unifor"
    tools:context=".AdmLoginPage" >

    <!-- Barra Superior -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_unifor"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="60dp"
        android:layout_height="60dp" >

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

        <ImageView
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/return_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/configLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/folito_medium"
            android:textSize="24sp"
            android:text="@string/enter_as_adm" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/login"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:fontFamily="@font/folito_light"
            android:background="@drawable/rounded_corners"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:fontFamily="@font/folito_light"
            android:background="@drawable/rounded_corners"
            android:padding="10dp" />

        <TextView
            android:id="@+id/show_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/show_password"
            android:textColor="@color/gray"
            android:clickable="true"
            android:onClick="onTextViewClicked" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/access_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/folito_bold"
            android:textSize="16sp"
            android:text="@string/access"
            android:textColor="@color/branco_unifor" />

    </LinearLayout>
</RelativeLayout>