<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/branco_unifor"
    tools:context=".SettingsPage" >

    <!-- Barra Superior -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azul_unifor"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Barra Inferior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/azul_unifor"
        android:layout_alignParentBottom="true" >

        <!-- Layout para botões -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <!-- Botão Home -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="95dp"
                android:layout_height="60dp"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/home" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Botão Bússola -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="95dp"
                android:layout_height="60dp"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/compassButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/compass" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Botão QR -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="95dp"
                android:layout_height="60dp"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/qrButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/qr" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Botão Configurações -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="95dp"
                android:layout_height="60dp"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selected_tab" />

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical" >

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/settings" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/selected" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:fontFamily="@font/folito_medium"
        android:textSize="24sp"
        android:text="@string/settings" />

    <LinearLayout
        android:id="@+id/config_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <!-- Idiomas -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/settings_rectangle_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/folito_medium"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/languages"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/languagesSpinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" />
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/settings_rectangle_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/folito_medium"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notifications"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <!-- Suporte/Contato -->
        <RelativeLayout
            android:id="@+id/support_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/settings_rectangle_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/folito_medium"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/contact_support"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_down" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/support_visibility"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/settings_rectangle_bg_alt"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/folito_regular"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:fontFamily="@font/folito_regular"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:clickable="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/enter_adm_button"
            android:layout_width="220dp"
            android:layout_height="70dp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/folito_bold"
            android:text="@string/enter_as_adm"
            android:textColor="@color/branco_unifor"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/logout"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle_shape" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logout"/>
    </RelativeLayout>

</RelativeLayout>